--- a/Translation/PRP_en_fr.xml
+++ b/Translation/PRP_en_fr.xml
@@ -32,6 +32,12 @@
       <Dest>Égouts de Malden</Dest>
     </String>
     <String List="0">
+      <EDID>DLC01LairHoldingCell</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>DLC01 Holding Cell</Source>
+      <Dest>Cellule de détention DLC01</Dest>
+    </String>
+    <String List="0">
       <EDID>DLC03NorthwoodRidgeQuarry01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Northwood Ridge Quarry</Source>
@@ -84,6 +90,18 @@
       <REC>CELL:FULL</REC>
       <Source>Warehouse</Source>
       <Dest>Entrepôt</Dest>
+    </String>
+    <String List="0">
+      <EDID>WarehouseGunTraps</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>TrapGunPackins</Source>
+      <Dest>TrapGunPackins</Dest>
+    </String>
+    <String List="0">
+      <EDID>DebugRange</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Quick Test Cell</Source>
+      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>GraygardenHomestead01</EDID>
@@ -156,12 +174,6 @@
       <REC>CELL:FULL</REC>
       <Source>King Cola&apos;s Castle Tower</Source>
       <Dest>Tour du Château du Roi Cola</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC04NWJunkyardUFO01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Ultimate UFO</Source>
-      <Dest>OVNI ultime</Dest>
     </String>
     <String List="0">
       <EDID>ShawHighSchool01</EDID>
@@ -264,6 +276,12 @@
       <REC>CELL:FULL</REC>
       <Source>College Square Station</Source>
       <Dest>Station College Square</Dest>
+    </String>
+    <String List="0">
+      <EDID>WarehouseAmbushes</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Quick Test Cell</Source>
+      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>DmndStandsTaphouse01</EDID>
@@ -644,6 +662,12 @@
       <Dest>Café de Cappy</Dest>
     </String>
     <String List="0">
+      <EDID>DebugJPSA</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Companion Situational Awareness</Source>
+      <Dest>Companion Situational Awareness</Dest>
+    </String>
+    <String List="0">
       <EDID>PrydwenHull03</EDID>
       <REC>CELL:FULL</REC>
       <Source>Prydwen Quarters</Source>
@@ -680,16 +704,10 @@
       <Dest>Les incroyables machines</Dest>
     </String>
     <String List="0">
-      <EDID>ccTOSFO4001</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Noir Penthouse</Source>
-      <Dest>Penthouse noir</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndDugoutInn01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Dugout Inn</Source>
-      <Dest>L&apos;auberge de l&apos;Abri</Dest>
+      <Dest>L&apos;Auberge de l&apos;abri</Dest>
     </String>
     <String List="0">
       <EDID>CambridgePD01</EDID>
@@ -809,7 +827,7 @@
       <EDID>DLC04HubFizztopMountainInterior01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Fizztop Mountain</Source>
-      <Dest>Mont Pétillant</Dest>
+      <Dest>Mont pétillant</Dest>
     </String>
     <String List="0">
       <EDID>GoodneighborTheMemoryDen</EDID>
@@ -938,6 +956,12 @@
       <Dest>Division des systèmes avancés de l&apos;Institut</Dest>
     </String>
     <String List="0">
+      <EDID>WarehouseMusic</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Quick Test Cell</Source>
+      <Dest>Quick Test Cell</Dest>
+    </String>
+    <String List="0">
       <EDID>Vault81Secret</EDID>
       <REC>CELL:FULL</REC>
       <Source>Secret Vault 81</Source>
@@ -1031,7 +1055,7 @@
       <EDID>DLC04BottlingPlant02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Secure Beverageer Lab</Source>
-      <Dest>Laboratoire de docteur ès soda sécurisé</Dest>
+      <Dest>Sécurisez le laboratoire docteur ès soda.</Dest>
     </String>
     <String List="0">
       <EDID>SandyCovesHome01</EDID>
@@ -1628,6 +1652,12 @@
       <Dest>Niveaux inférieurs de Med-Tek</Dest>
     </String>
     <String List="0">
+      <EDID>WarehouseClutter</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Workbench Bonanza</Source>
+      <Dest>Abondance d&apos;établis</Dest>
+    </String>
+    <String List="0">
       <EDID>CovenantHQ01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Sewer</Source>
@@ -1787,7 +1817,7 @@
       <EDID>NahantOceanSociety02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Nahant Oceanological Research Lab</Source>
-      <Dest>Laboratoire de recherches océanographiques de Nahant</Dest>
+      <Dest>Laboratoire de recherche océanographique de Nahant</Dest>
     </String>
     <String List="0">
       <EDID>AtomatoysCorporateHQ01</EDID>
@@ -1860,6 +1890,12 @@
       <REC>CELL:FULL</REC>
       <Source>35 Court</Source>
       <Dest>35 Court</Dest>
+    </String>
+    <String List="0">
+      <EDID>WarehouseBathrooms</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Quick Test Cell</Source>
+      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>CharlestownLaundry</EDID>
